[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "sefcom_clusterutils"
description = "Utilities for ASU SEFCOM's kubernetes cluster"
requires-python = "~=3.8"
license = {file = "LICENSE"}
authors = [{name = "Kevin Phoenix", email = "kevin@kphoenix.us"}]
dependencies = [
    "kubernetes~=27.2.0",
    "rich~=13.1.0",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/sefcom/clusterutils"

[project.scripts]
sc-utilization = "sefcom_clusterutils.utilization:main"

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",
    "FBT",
    "T201",
    "TRY002",
]
